--- a/.github/workflows/auto_ms_api.yml
+++ b/.github/workflows/auto_ms_api.yml
@@ -7,14 +7,14 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    - name: 迁出代码
+    - name: 遷出代码
       uses: actions/checkout@v2
       with:
         token: ${{ secrets.GH_TOKEN }}
-    - name: 设置时区
+    - name: 設定時區
       run: |
         sudo timedatectl set-timezone 'UTC'
-    - name: 调用API
+    - name: 調用API
       env:
         CLIENT_ID1: ${{ secrets.CLIENT_ID1 }}
         CLIENT_SECRET1: ${{ secrets.CLIENT_SECRET1 }}
