--- a/.github/workflows/auto_ms_api.yml
+++ b/.github/workflows/auto_ms_api.yml
@@ -1,8 +1,8 @@
 name: MS OFFICE 365 E5自動續期
 on: 
   workflow_dispatch:
-  schedule:
-  - cron: '5 5 * * *'
+  #schedule:
+  #- cron: '5 5 * * *'
 jobs: 
   deploy:
     runs-on: ubuntu-latest
